Aqui resolvi problemas entre stashes

--- a/Archivo2.html
+++ b/Archivo2.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+Supon que estoy tratando de arreglar algo pero esta a la mitad
 este cambio lo invente para tener 2 stash
 </body>
 </html>
